--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(90deg, rgba(93,142,251,1) 0%, rgba(93,142,251,1) 50%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgba(255, 119, 0) 0%, rgba(255, 119, 0) 50%, rgba(255, 119, 0) 100%);
     height: 100%;
     padding: 0px;
     margin: 0px;
@@ -17,7 +17,7 @@ body {
 }
 
 .main-content .error-message {
-    color: yellow;
+    color: rgb(25, 0, 255);
     font-weight: bold;
     font-size: 16px;
     margin-top: 0px;
