--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,11 +1,29 @@
 <%- include('partials/header', { title: "Landing" }) %>
 
 <h1>User Dashboard</h1>
-<h2>Welcome, <%=username %></h2>
-<h3>Role: <%=role %></h3>
+<h2>Welcome, <%=user.username %></h2>
+<h3>Role: <%=user.role %></h3>
 
 <div class="landing">
-
+    <% if (role === 'admin') { %>
+        <h1>Admin Bar</h1>
+        <h2>Users List:</h2>
+        
+        <% users.forEach((user) => { %>
+            <ul>
+                <li>
+                    <p>Username: <%=user.username %></p>
+                    <p>Email: <%=user.email %></p>
+                    <p>Role: <%=user.role %></p>
+                </li>
+            </ul>
+        <% })%>
+        <% } else { %>
+            <ul>
+                <h1>User Dashboard</h1>
+                <p>Successfully logged in!</p>
+            </ul>
+        <% } %>
 
     <form action="/logout" method="post">
         <button type="submit">Logout</button>
