--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,11 +1,9 @@
 <%- include('partials/header', { title: "Landing" }) %>
 
 <h1>User Dashboard</h1>
-<h2>Welcome, <%=user.username %></h2>
-<h3>Role: <%=user.role %></h3>
 
 <div class="landing">
-    <% if (role === 'admin') { %>
+    <% if (users) { %>
         <h1>Admin Bar</h1>
         <h2>Users List:</h2>
         
@@ -20,7 +18,6 @@
         <% })%>
         <% } else { %>
             <ul>
-                <h1>User Dashboard</h1>
                 <p>Successfully logged in!</p>
             </ul>
         <% } %>
