--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,9 @@
 <%- include('partials/header', { title: "Login" }) %>
+
     <h1>Login</h1>
+    <% if (error) { %>
+        <p class="error"><%= error %></p>
+    <% } %>
     <form action="/login" method="POST">
         <div class="form-input-container">
             <label for="email">Email:</label>
