--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,5 +1,8 @@
 <%- include('partials/header', { title: "Sign Up" }) %>
     <h1>Sign Up</h1>
+    <% if (error) { %>
+        <p class="error"><%= error %></p>
+    <% } %>
     <form action="/signup" method="POST">
         <div class="form-input-container">
             <label for="email">Email:</label>
